package top.liumuge.uml.composition;

public class IDCard {

}
