package top.liumuge.uml.dependence;

/**
 * @author MuGe
 * @program DesignPatterns
 * @createTime 2020/6/26 21:08
 * @description
 */
public class PersonDao {
}
